Create List Of Stores
XML By Isabella

Co-Authored-By: IsabellaKeler <83827396+IsabellaKeler@users.noreply.github.com>

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,3 +1,5 @@
+<!-- Author: Elena Nastina -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
   </head>
+
   <body>
     <div class="header">
 
@@ -17,6 +20,7 @@
     </div>
     <div class='content'>
 
+      <!-- container that holds buttons -->
       <div class="buttons">
         <div id="profile" class="button hidden" onclick="location.href='profile.html'">
           <h1 class="button-text">Profile</h1>
