Create Search Functionality + Create About Us

--- a/Website/index.html
+++ b/Website/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <!-- header container-->
     <div class="header">
 
       <div class="title">
@@ -43,12 +44,18 @@
         </div>
       </div>
 
+      <!-- about container -->
       <div class="about">
         <div class="title"><h1>About Us</h1></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>One day we found ourselves complaining about the enormous amount of loyalty cards or apps that we have in our wallets or phones. Wouldn’t it be great to have just one online account or one card for them all. And so was born the idea of the Your Loyalty Hub app. With improved technology and simplicity, you can update your information, shop online at multiple stores, collect and view loyalty points, offers and benefits.
+        <p>We hope that you enjoy this space as much as we had fun creating it for you.</p>
+        <br></br>
+        <p>Your Loyalty Hub team</p>
+</p>
       </div>
 
     </div>
+    <!-- footer container includes FAQ/T&C/Privcy and Contact pages -->
     <div class="footer">
 
       <a href="faq.html">FAQ</a>
