--- a/Website/index.html
+++ b/Website/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Loyalty Hub</title>
     <link rel="stylesheet" href="style.css">
+    <script>const loggedIn = <%= loggedIn %></script>
     <script src="main.js" defer></script>
   </head>
 
@@ -15,7 +16,7 @@
     <div class="header">
 
       <div class="title">
-        <h1>Welcome To Your Loyalty Hub</h1>
+        <h1>Welcome To Your Loyalty Hub<%= loggedIn ? user.name ? ', ' + user.name : '' : '' %></h1>
       </div>
 
     </div>
@@ -38,7 +39,7 @@
           <img class="icon" src="images/List items.svg" />
         </div>
 
-        <div id="logout" class="button hidden" onclick="logout()">
+        <div id="logout" class="button hidden" onclick="location.href='logout'">
           <h1 class="button-text">Logout</h1>
           <img class="icon" src="images/Logout icon.svg" />
         </div>
@@ -47,11 +48,12 @@
       <!-- about container -->
       <div class="about">
         <div class="title"><h1>About Us</h1></div>
-        <p>One day we found ourselves complaining about the enormous amount of loyalty cards or apps that we have in our wallets or phones. Wouldn’t it be great to have just one online account or one card for them all. And so was born the idea of the Your Loyalty Hub app. With improved technology and simplicity, you can update your information, shop online at multiple stores, collect and view loyalty points, offers and benefits.
-        <p>We hope that you enjoy this space as much as we had fun creating it for you.</p>
-        <br></br>
-        <p>Your Loyalty Hub team</p>
-</p>
+        <p>
+          One day we found ourselves complaining about the enormous amount of loyalty cards or apps that we have in our wallets or phones. Wouldn’t it be great to have just one online account or one card for them all. And so was born the idea of the Your Loyalty Hub app. With improved technology and simplicity, you can update your information, shop online at multiple stores, collect and view loyalty points, offers and benefits.
+          <p>We hope that you enjoy this space as much as we had fun creating it for you.</p>
+          <br></br>
+          <p>Your Loyalty Hub team</p>
+        </p>
       </div>
 
     </div>
