--- a/Website/signUp.html
+++ b/Website/signUp.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Your Loyalty Hub</title>
 <link rel="stylesheet" href="signUp.css">
+</head>
 <body>
   <div class="header">
 
@@ -10,27 +13,26 @@
 
   </div>
   <div class="form">
-<form action="/action_page.php" >
+<form action="/signUp.html" method="post">
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
 
+    <% if (messages.error) { %>
+      <p>Error: <%= messages.error %></p>
+    <% } %>
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <input type="text" placeholder="Enter Email" name="username" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-    
-    <label>
-      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-    </label>
+    <label for="password-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="password-repeat" required>
 
     <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="button" class="cancelbtn" onclick="location.href='/login.html'">Cancel</button>
       <button type="submit" class="signupbtn" id="sign-up-button">Sign Up</button>
     </div>
   </div>
